Fix bleed container

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -113,22 +113,6 @@ a,
   will-change: transform;
 }
 
-.reading-wrapper,
-.reading-wrapper .markdown {
-  @apply grid w-full;
-  grid-template-columns: 1fr min(69ch, 100%) 1fr;
-}
-
-.reading-wrapper :not(.bleed *),
-.reading-wrapper .markdown * {
-  grid-column: 2;
-}
-
-.reading-wrapper .bleed,
-.reading-wrapper .markdown {
-  grid-column: 1 / -1;
-}
-
 details summary {
   @apply cursor-pointer;
 }
